--- a/第3章_表达式/readme.html
+++ b/第3章_表达式/readme.html
@@ -261,7 +261,47 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h2 class="mume-header" id="%E7%AC%AC%E4%B8%89%E7%AB%A0-%E8%A1%A8%E8%BE%BE%E5%BC%8F">&#x7B2C;&#x4E09;&#x7AE0; &#x8868;&#x8FBE;&#x5F0F;</h2>
+      <ul>
+<li><a href="#%E7%AC%AC%E4%B8%89%E7%AB%A0-%E8%A1%A8%E8%BE%BE%E5%BC%8F">&#x7B2C;&#x4E09;&#x7AE0; &#x8868;&#x8FBE;&#x5F0F;</a>
+<ul>
+<li><a href="#31-%E8%A1%A8%E8%BE%BE%E5%BC%8F%E6%9C%89%E5%85%B3%E7%9A%84%E4%B8%80%E4%BA%9B%E5%9F%BA%E7%A1%80%E6%A6%82%E5%BF%B5">3.1 &#x8868;&#x8FBE;&#x5F0F;&#x6709;&#x5173;&#x7684;&#x4E00;&#x4E9B;&#x57FA;&#x7840;&#x6982;&#x5FF5;</a>
+<ul>
+<li><a href="#311-%E8%BF%90%E7%AE%97%E7%AC%A6%E5%92%8C%E8%BF%90%E7%AE%97%E5%AF%B9%E8%B1%A1">3.11 &#x8FD0;&#x7B97;&#x7B26;&#x548C;&#x8FD0;&#x7B97;&#x5BF9;&#x8C61;</a></li>
+<li><a href="#312-%E8%A1%A8%E8%BE%BE%E5%BC%8F">3.12 &#x8868;&#x8FBE;&#x5F0F;</a></li>
+<li><a href="#313-%E7%BB%84%E5%90%88%E8%BF%90%E7%AE%97">3.13 &#x7EC4;&#x5408;&#x8FD0;&#x7B97;</a></li>
+<li><a href="#314-%E8%BF%90%E7%AE%97%E5%AF%B9%E8%B1%A1%E8%BD%AC%E6%8D%A2%E5%92%8C%E9%87%8D%E8%BD%BD%E8%BF%90%E7%AE%97%E7%AC%A6">3.14 &#x8FD0;&#x7B97;&#x5BF9;&#x8C61;&#x8F6C;&#x6362;&#x548C;&#x91CD;&#x8F7D;&#x8FD0;&#x7B97;&#x7B26;</a></li>
+<li><a href="#315-%E5%B7%A6%E5%80%BC%E5%92%8C%E5%8F%B3%E5%80%BC">3.15 &#x5DE6;&#x503C;&#x548C;&#x53F3;&#x503C;</a></li>
+<li><a href="#316-%E8%BF%90%E7%AE%97%E7%AC%A6%E7%9A%84%E4%BC%98%E5%85%88%E7%BA%A7%E5%92%8C%E7%BB%93%E5%90%88%E5%BE%8B">3.16 &#x8FD0;&#x7B97;&#x7B26;&#x7684;&#x4F18;&#x5148;&#x7EA7;&#x548C;&#x7ED3;&#x5408;&#x5F8B;</a></li>
+<li><a href="#317-%E6%B1%82%E5%80%BC%E9%A1%BA%E5%BA%8F">3.17 &#x6C42;&#x503C;&#x987A;&#x5E8F;</a></li>
+</ul>
+</li>
+<li><a href="#32-%E8%BF%90%E7%AE%97%E7%AC%A6%E4%BB%8B%E7%BB%8D">3.2 &#x8FD0;&#x7B97;&#x7B26;&#x4ECB;&#x7ECD;</a>
+<ul>
+<li><a href="#321-%E7%AE%97%E6%9C%AF%E8%BF%90%E7%AE%97%E7%AC%A6">3.21 &#x7B97;&#x672F;&#x8FD0;&#x7B97;&#x7B26;</a></li>
+<li><a href="#322-%E9%80%BB%E8%BE%91%E5%92%8C%E5%85%B3%E7%B3%BB%E8%BF%90%E7%AE%97%E7%AC%A6">3.22 &#x903B;&#x8F91;&#x548C;&#x5173;&#x7CFB;&#x8FD0;&#x7B97;&#x7B26;</a></li>
+<li><a href="#323-%E8%B5%8B%E5%80%BC%E8%BF%90%E7%AE%97%E7%AC%A6">3.23 &#x8D4B;&#x503C;&#x8FD0;&#x7B97;&#x7B26;</a>
+<ul>
+<li><a href="#3231-%E5%A4%8D%E5%90%88%E8%B5%8B%E5%80%BC%E8%BF%90%E7%AE%97%E7%AC%A6">3.231 &#x590D;&#x5408;&#x8D4B;&#x503C;&#x8FD0;&#x7B97;&#x7B26;</a></li>
+</ul>
+</li>
+<li><a href="#324-%E9%80%92%E5%A2%9E%E5%92%8C%E9%80%92%E5%87%8F%E8%BF%90%E7%AE%97%E7%AC%A6">3.24 &#x9012;&#x589E;&#x548C;&#x9012;&#x51CF;&#x8FD0;&#x7B97;&#x7B26;</a></li>
+<li><a href="#325-%E6%88%90%E5%91%98%E8%AE%BF%E9%97%AE%E8%BF%90%E7%AE%97%E7%AC%A6">3.25 &#x6210;&#x5458;&#x8BBF;&#x95EE;&#x8FD0;&#x7B97;&#x7B26;</a></li>
+<li><a href="#326-%E6%9D%A1%E4%BB%B6%E8%BF%90%E7%AE%97%E7%AC%A6">3.26 &#x6761;&#x4EF6;&#x8FD0;&#x7B97;&#x7B26;</a></li>
+<li><a href="#327-%E4%BD%8D%E8%BF%90%E7%AE%97%E7%AC%A6">3.27 &#x4F4D;&#x8FD0;&#x7B97;&#x7B26;</a>
+<ul>
+<li><a href="#3271-%E5%B7%A6%E7%A7%BB%E5%8F%B3%E7%A7%BB%E8%BF%90%E7%AE%97%E7%AC%A6">3.271 &#x5DE6;&#x79FB;&#x53F3;&#x79FB;&#x8FD0;&#x7B97;&#x7B26;</a></li>
+<li><a href="#3272-%E4%BD%8D%E6%B1%82%E5%8F%8D%E8%BF%90%E7%AE%97%E7%AC%A6">3.272 &#x4F4D;&#x6C42;&#x53CD;&#x8FD0;&#x7B97;&#x7B26;</a></li>
+<li><a href="#3273-%E4%BD%8D%E4%B8%8E-%E4%BD%8D%E6%88%96-%E4%BD%8D%E5%BC%82%E6%88%96%E8%BF%90%E7%AE%97%E7%AC%A6">3.273 &#x4F4D;&#x4E0E;&#x3001;&#x4F4D;&#x6216;&#x3001;&#x4F4D;&#x5F02;&#x6216;&#x8FD0;&#x7B97;&#x7B26;</a></li>
+</ul>
+</li>
+<li><a href="#328-sizeof%E8%BF%90%E7%AE%97%E7%AC%A6">3.28 sizeof&#x8FD0;&#x7B97;&#x7B26;</a></li>
+<li><a href="#329-%E9%80%97%E5%8F%B7%E8%BF%90%E7%AE%97%E7%AC%A6">3.29 &#x9017;&#x53F7;&#x8FD0;&#x7B97;&#x7B26;</a></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<h2 class="mume-header" id="%E7%AC%AC%E4%B8%89%E7%AB%A0-%E8%A1%A8%E8%BE%BE%E5%BC%8F">&#x7B2C;&#x4E09;&#x7AE0; &#x8868;&#x8FBE;&#x5F0F;</h2>
 
 <h3 class="mume-header" id="31-%E8%A1%A8%E8%BE%BE%E5%BC%8F%E6%9C%89%E5%85%B3%E7%9A%84%E4%B8%80%E4%BA%9B%E5%9F%BA%E7%A1%80%E6%A6%82%E5%BF%B5">3.1 &#x8868;&#x8FBE;&#x5F0F;&#x6709;&#x5173;&#x7684;&#x4E00;&#x4E9B;&#x57FA;&#x7840;&#x6982;&#x5FF5;</h3>
 
